--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
-  "name": "openai-chat-netlify",
-  "version": "1.0.0"
+  "name": "looptestai",
+  "version": "1.0.0",
+  "dependencies": {
+    "node-fetch": "^2.6.1"
+  }
 }
